// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DumbExportSection component should render an DumbExportSection component with languages options 1`] = `
<div
  className="admin-box admin-export-section"
>
  <div>
    <h3
      className="dark-title-3"
    >
      Export data
    </h3>
    <div
      className="box-hyphen"
    />
    <div
      className="annotation margin padding-left"
    >
      You can export all of the data by clicking on the export button
    </div>
  </div>
  <div
    className="admin-content"
  >
    <div
      className="no-margin-bottom form-group"
    >
      <div
        className="dark-title3"
      >
        <span>
          Translation of the data
        </span>
      </div>
      <div
        className="radio"
      >
        <label
          title=""
        >
          <input
            checked={true}
            disabled={false}
            onChange={[Function]}
            type="radio"
          />
          <span>
            Keep the messages in their original languages
          </span>
        </label>
      </div>
      <div
        className="radio"
      >
        <label
          title=""
        >
          <input
            checked={false}
            disabled={false}
            onChange={[Function]}
            type="radio"
          />
          <span>
            Translate the messages in:
          </span>
        </label>
      </div>
    </div>
    <br />
    <div
      className="center-flex"
    >
      <a
        className="button-link button-dark margin-l"
        href="foo.com"
        onClick={[Function]}
        style={Object {}}
      >
        <span>
          Export
        </span>
      </a>
    </div>
  </div>
</div>
`;

exports[`DumbExportSection component should render an DumbExportSection component without languages options 1`] = `
<div
  className="admin-box admin-export-section"
>
  <div>
    <h3
      className="dark-title-3"
    >
      Export data
    </h3>
    <div
      className="box-hyphen"
    />
    <div
      className="annotation margin padding-left"
    >
      You can export all of the data by clicking on the export button
    </div>
  </div>
  <div
    className="admin-content"
  >
    <div
      className="no-margin-bottom form-group"
    />
    <br />
    <div
      className="center-flex"
    >
      <a
        className="button-link button-dark margin-l"
        href="foo.com"
        onClick={[Function]}
        style={Object {}}
      >
        <span>
          Export
        </span>
      </a>
    </div>
  </div>
</div>
`;

exports[`DumbExportSection component should render an export section that handles different export links 1`] = `
<div
  className="admin-box admin-export-section"
>
  <div>
    <h3
      className="dark-title-3"
    >
      Export data
    </h3>
    <div
      className="box-hyphen"
    />
    <div
      className="annotation margin padding-left"
    >
      You can export all of the data by clicking on the export button
    </div>
  </div>
  <div
    className="admin-content"
  >
    <div
      className="no-margin-bottom form-group"
    >
      <div
        className="radio"
      >
        <label
          title=""
        >
          <input
            checked={true}
            disabled={false}
            name="exportLink"
            onChange={[Function]}
            type="radio"
            value="foo.com"
          />
          <span>
            Export general data for the vote module
          </span>
        </label>
      </div>
      <div
        className="radio"
      >
        <label
          title=""
        >
          <input
            checked={false}
            disabled={false}
            name="exportLink"
            onChange={[Function]}
            type="radio"
            value="bar.org"
          />
          <span>
            Export vote details for each user
          </span>
        </label>
      </div>
    </div>
    <br />
    <div
      className="center-flex"
    >
      <a
        className="button-link button-dark margin-l"
        href="foo.com"
        onClick={[Function]}
        style={Object {}}
      >
        <span>
          Export
        </span>
      </a>
    </div>
  </div>
</div>
`;
